@@ -1,3 +1,15 @@
+control_api (1.2.0) unstable; urgency=low
+
+  * New TemplateToDo method:
+    * GET /v1/template_to_dos
+  * GET /v1/distributed_to_dos
+    * Added "tags[]" parameter to filter DistributedToDo objects
+    * Added "tags" to the DistributedToDo objects
+  * GET /v1/distributed_to_dos/:uuid
+    * Added "tags" to the DistributedToDo object
+
+ -- Continuity Control Engineering  TODO
+
 control_api (1.1.0) stable; urgency=low
 
   * POST /v1/distributed_to_dos
